# fintech-api

./: .gitignore  README.md  pyproject.toml
docker/: ubuntu.Dockerfile
fintech/: app.py  tests.py
fintech/routers/: graphs.py  portfolio.py  ticker_info.py
fintech/routers/helpers/: helpers.py  input.py
